@@ -1,3 +1,4 @@
+* example script for fitting diffraction data of an epitaxial multilayer (by @VeryBitter)
 * update AlAs lattice parameters from APL 66, 682 (1995) (by @VeryBitter)
 * enable building Python 3.11 wheels
 
